fix: remove overflow hidden from body to enable scrolling

--- a/src/index.css
+++ b/src/index.css
@@ -136,7 +136,3 @@ html {
   -ms-overflow-style: none;
   overflow: -moz-scrollbars-none;
 }
-
-body {
-  overflow: hidden;
-}
